remove 2nd servlet

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </init-param>
     <init-param>
       <param-name>service</param-name>
-      <param-value>http://localhost:8080/raven</param-value>
+      <param-value>http://10.17.8.54:8080/raven/</param-value>
     </init-param>
     <init-param>
       <param-name>renew</param-name>
@@ -38,7 +38,7 @@
     </init-param>
     <init-param>
       <param-name>service</param-name>
-      <param-value>http://localhost:8080/raven</param-value>
+      <param-value>http://10.17.8.54:8080/raven/</param-value>
     </init-param>
     <init-param>
       <param-name>redirectAfterValidation</param-name>
@@ -95,15 +95,5 @@
   <servlet-mapping>
     <servlet-name>SysAccessServlet</servlet-name>
     <url-pattern>/SysAccessServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>SystemAccessNoJsServlet</display-name>
-    <servlet-name>SystemAccessNoJsServlet</servlet-name>
-    <servlet-class>edu.ku.biostatistics.heron.servlet.SystemAccessNoJsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SystemAccessNoJsServlet</servlet-name>
-    <url-pattern>/SystemAccessNoJsServlet</url-pattern>
   </servlet-mapping>
 </web-app>
