ldap jobcode added

--- a/src/configs.properties
+++ b/src/configs.properties
@@ -5,3 +5,4 @@ user_project=Hictr
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
 ldap_credential=P@ssw0rd
+excluded_jobcode=24600
