--- a/src/configs.properties
+++ b/src/configs.properties
@@ -4,5 +4,5 @@ i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
 user_project=Hictr
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
-ldap_credential=P@ssw0rd
+ldap_credential=******
 excluded_jobcode=24600
