--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,13 @@
 		<fileset dir="WebContent/WEB-INF/lib">
 			<include name="*.jar" />
 		</fileset>
-	</path>
+		<fileset dir="/usr/share/maven-repo/javax/servlet/servlet-api/2.4/">
+			<include name="*.jar" />
+		</fileset>
+		<fileset dir="/usr/share/java/">
+			<include name="*.jar" />
+		</fileset>
+    </path>
 
 	<target name="init">
 		<mkdir dir="build/classes" />
