--- a/src/configs.properties
+++ b/src/configs.properties
@@ -1,6 +1,6 @@
 chalk_url = http://www2.kumc.edu/chalk3/default.aspx
 cas_login_url = https://cas.kumc.edu/cas/login
-i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
+i2b2_client_service=https://crappie.kumc.edu/
 user_project=Hictr
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
