added raven url

--- a/src/configs.properties
+++ b/src/configs.properties
@@ -6,3 +6,4 @@ ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
 ldap_credential=******
 excluded_jobcode=24600
+raven_url=http://10.17.8.54:8080/raven
