- remaining tweaks for prod configuration (#320)   - copy configs.properties to classes rather than src   - use dist-${env}/ rather than just dist/ dir   - hg ignore dist-test and dist-prod

--- a/.hgignore
+++ b/.hgignore
@@ -4,4 +4,6 @@ syntax: glob
 WebContent/WEB-INF/classes/configs.properties
 WebContent/WEB-INF/classes/log4j.properties
 dist/
+dist-test/
+dist-prod/
 lib-ivy/
