--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,16 @@
   </properties>
 
   <dependencies>
-
+    <!--
+	http://maven.apache.org/general.html#importing-jars
+	$ mvn install:install-file -Dfile=src/main/webapp/WEB-INF/lib/i2b2Common-core.jar  -DgroupId=edu.harvard -DartifactId=i2b2Common-core -Dversion=1.4 -Dpackaging=jar -DgeneratePom=true
+    -->
+    <dependency>
+      <groupId>edu.harvard</groupId>
+      <artifactId>i2b2Common-core</artifactId>
+      <version>1.4</version>
+    </dependency>
+    
     <!-- from
         http://search.maven.org/#artifactdetails|org.jasig.cas.client|cas-client|3.2.0|pom
     -->
@@ -21,7 +30,6 @@
       <groupId>org.jasig.cas.client</groupId>
       <artifactId>cas-client-core</artifactId>
       <version>3.2.0</version>
-      <scope>runtime</scope>
     </dependency>
 
     <!-- Don't put this in our .war file; it conflicts with
