update ignores for maven directory structure

--- a/.hgignore
+++ b/.hgignore
@@ -1,9 +1,4 @@
 syntax: glob
 *.class
 *~
-WebContent/WEB-INF/classes/configs.properties
-WebContent/WEB-INF/classes/log4j.properties
-dist/
-dist-test/
-dist-prod/
-lib-ivy/
+target
