--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.kumc.informatics.raven</groupId>
-  <artifactId>raven-ex</artifactId>
+  <artifactId>raven</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Raven Research Portal</name>
@@ -70,6 +70,25 @@
     </dependency>
     -->
 
+    <!--
+	"before the most generic dependency"
+	- http://dominikdorn.com/2010/05/maven-junit-classformaterror-absent-code-attribute/
+    -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.1</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <!-- http://stackoverflow.com/questions/5845990/maven-3-and-junit-4-compilation-problem-package-org-junit-does-not-exist -->
+      <version>4.8.2</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- another ServiceLocator.java dependency. hmm. -->
     <dependency>
       <groupId>javax</groupId>
@@ -77,22 +96,9 @@
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
-
-    <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
-      <version>1.4.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
   <build>
-    <finalName>raven-ex</finalName>
+    <finalName>raven</finalName>
 
     <plugins>
       <!-- maven evidently defaults to 1.3,
