--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -1,9 +1,12 @@
+# ${params} satisfied by Maven from pom.xml and settions.xml
+# a la http://stackoverflow.com/questions/2335431/maven-change-a-value-in-a-file-based-on-profile
+# and http://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html
 chalk_url = http://www2.kumc.edu/chalk3/default.aspx
 cas_login_url = https://cas.kumc.edu/cas/login
 i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
 user_project=Hictr
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
-ldap_credential=******
+ldap_credential=${ldap_credential}
 excluded_jobcode=24600
-raven_url=http://10.17.8.54:8080/raven
+raven_url=${raven_url}
