--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -1,9 +1,10 @@
-# ${params} satisfied by Maven from pom.xml and settions.xml
+# ${params} satisfied by Maven from pom.xml and settings.xml
 # a la http://stackoverflow.com/questions/2335431/maven-change-a-value-in-a-file-based-on-profile
 # and http://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html
+# TODO: split into KUMC CAS properties, KUMC LDAP properties, i2b2 client props
 chalk_url = http://www2.kumc.edu/chalk3/default.aspx
 cas_login_url = https://cas.kumc.edu/cas/login
-i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
+i2b2_client_service=${i2b2_client_service}
 user_project=Hictr
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
