--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>raven</display-name>
+<web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <display-name>raven: ${project.name} ${raven_url}</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -22,7 +22,8 @@
     </init-param>
     <init-param>
       <param-name>service</param-name>
-      <param-value>https://crappie.kumc.edu/</param-value>
+      <!-- ${params} are filtered by maven; see pom.xml -->
+      <param-value>${raven_cas_service}</param-value>
     </init-param>
     <init-param>
       <param-name>renew</param-name>
@@ -34,11 +35,11 @@
     <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
     <init-param>
       <param-name>casServerUrlPrefix</param-name>
-      <param-value>https://cas.kumc.edu/cas/</param-value>
+      <param-value>${raven_cas_service}</param-value>
     </init-param>
     <init-param>
       <param-name>service</param-name>
-      <param-value>https://crappie.kumc.edu/</param-value>
+      <param-value>${raven_cas_service}</param-value>
     </init-param>
     <init-param>
       <param-name>redirectAfterValidation</param-name>
@@ -77,7 +78,7 @@
     <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
   </listener>
   <servlet>
-    <description></description>
+    <description/>
     <display-name>AuthServlet</display-name>
     <servlet-name>AuthServlet</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.AuthServlet</servlet-class>
@@ -87,7 +88,7 @@
     <url-pattern>/AuthServlet</url-pattern>
   </servlet-mapping>
   <servlet>
-    <description></description>
+    <description/>
     <display-name>SysAccessServlet</display-name>
     <servlet-name>SysAccessServlet</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.SysAccessServlet</servlet-class>
@@ -97,7 +98,7 @@
     <url-pattern>/SysAccessServlet</url-pattern>
   </servlet-mapping>
   <servlet>
-    <description></description>
+    <description/>
     <display-name>SponsorshipServlet</display-name>
     <servlet-name>SponsorshipServlet</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipServlet</servlet-class>
@@ -107,7 +108,7 @@
     <url-pattern>/SponsorshipServlet</url-pattern>
   </servlet-mapping>
   <servlet>
-    <description></description>
+    <description/>
     <display-name>SponsorshipApprovalServlet</display-name>
     <servlet-name>SponsorshipApprovalServlet</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipApprovalServlet</servlet-class>
@@ -116,8 +117,8 @@
     <servlet-name>SponsorshipApprovalServlet</servlet-name>
     <url-pattern>/SponsorshipApprovalServlet</url-pattern>
   </servlet-mapping>
-   <servlet>
-    <description></description>
+  <servlet>
+    <description/>
     <display-name>AcknowledgeDisclaimerServlet</display-name>
     <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.AcknowledgeDisclaimerServlet</servlet-class>
@@ -126,8 +127,8 @@
     <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
     <url-pattern>/AcknowledgeDisclaimerServlet</url-pattern>
   </servlet-mapping>
-   <servlet>
-    <description></description>
+  <servlet>
+    <description/>
     <display-name>TerminateUsers</display-name>
     <servlet-name>TerminateUsers</servlet-name>
     <servlet-class>edu.kumc.informatics.heron.servlet.TerminateUsers</servlet-class>
