--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
     <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
     <init-param>
       <param-name>casServerUrlPrefix</param-name>
-      <param-value>${raven_cas_service}</param-value>
+      <param-value>https://cas.kumc.edu/cas/</param-value>
     </init-param>
     <init-param>
       <param-name>service</param-name>
