--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -11,3 +11,4 @@ ldap_principal=cn=biostats, ou=authaccounts,o=idvault
 ldap_credential=${ldap_credential}
 excluded_jobcode=24600
 raven_url=${raven_url}
+scm.version = ${buildNumber}
