Migrate main page from raven portal to HERON tools focus. (#371)  - add jstl, taglibs dependencies to pom.xml  - use XML JSP syntax
see also earlier work:
183   1b627533c2f0   2011-06-23 10:12 -0500   dconnolly
  factored kumc_layout.xml out of index.html using genshi

181   9d5a231d04c5   2011-06-23 08:31 -0500   dconnolly
  top/tail of KUMC style

180   26092b07b37a   2011-06-23 08:15 -0500   dconnolly
  start to integrate new KUMC style into RAVEN portal

--HG--
branch : frontiers-layout

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,31 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- we seem to need this this to use x:transform? -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.1.2</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!--
+    I was getting:
+    org.apache.jasper.JasperException: PWC6169
+    This bug has a work-around http://netbeans.org/bugzilla/show_bug.cgi?id=188765
+    -->
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>x</artifactId>
+      <version>1.1.2</version>
+      <type>tld</type>
+    </dependency>
+
     <!-- used in, e.g. HeronDBDao.java -->
     <dependency>
       <groupId>commons-collections</groupId>
@@ -132,7 +157,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>raven</finalName>
+    <finalName>raven</finalName><!-- TODO: rename to heron-admin or some such-->
 
     <!--
         see also profiles.xml
