fix project_schema configuration to fix system users report (#371)  - throw Error rather than proceeding with null projectSchema
--HG--
branch : frontiers-layout

--- a/src/main/filters/filter-dev.properties
+++ b/src/main/filters/filter-dev.properties
@@ -1,5 +1,7 @@
+# maven filter properties for developer testing on localhost
 # cribbed from
 # http://jee-bpel-soa.blogspot.com/2009/02/maven-profiles-filters-resources-and.html
 raven_cas_service=http://localhost:8080/raven/
 raven_url=http://localhost:8080/raven/
 i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
+heron_project_schema=BlueHeronData
