--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -2,3 +2,5 @@
 raven_cas_service=https://crappie.kumc.edu/
 raven_url=https://crappie.kumc.edu/raven/
 i2b2_client_service=https://crappie.kumc.edu/i2b2webclient/cas_login.html
+heron_project_schema=BlueHeronData
+
