--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -12,3 +12,4 @@ ldap_credential=${ldap_credential}
 excluded_jobcode=24600
 raven_url=${raven_url}
 scm.version = ${buildNumber}
+project_schema=${heron_project_schema}
