--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.kumc.informatics</groupId>
-  <artifactId>raven</artifactId> <!-- TODO: change to heron-admin or the like -->
+  <artifactId>heron-admin</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>HERON Admin</name>
@@ -28,6 +28,12 @@
   http://jee-bpel-soa.blogspot.com/2009/02/maven-profiles-filters-resources-and.html
   -->
     <profiles>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <env>prod</env>
+            </properties>
+        </profile>
         <profile>
             <id>test</id>
             <properties>
@@ -157,7 +163,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>raven</finalName><!-- TODO: rename to heron-admin or some such-->
+    <finalName>heron-admin</finalName>
 
     <!--
         see also profiles.xml
