factor out Mailer; inject using Spring (#510)  - test with mock-javamail  -
--HG--
branch : frontiers-layout

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,14 @@
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.jvnet.mock-javamail</groupId>
+      <artifactId>mock-javamail</artifactId>
+      <version>1.7</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>heron-admin</finalName>
