--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,7 @@
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
-      <version>20040616</version>
-      <scope>provided</scope>
+      <version>3.1</version>
     </dependency>
 
     <!-- Used in, e.g. heron/util/DBUtil.java -->
@@ -120,11 +119,17 @@
       <version>1.0.4</version>
     </dependency>
 
-    <!-- hmm... why are we using this? -->
+    <!-- for database access, inversion of control -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
-      <version>2.0</version>
+      <version>2.5.6.SEC02</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>2.5.6.SEC02</version>
     </dependency>
 
     <!-- not sure we need this; see ServiceLocator.java
@@ -152,6 +157,15 @@
       <!-- http://stackoverflow.com/questions/5845990/maven-3-and-junit-4-compilation-problem-package-org-junit-does-not-exist -->
       <version>4.8.2</version>
       <scope>test</scope>
+    </dependency>
+    
+    <!-- Install Oracle and see /opt/oracle/product/10gR2/db/jdbc/lib/ojdbc14.jar
+    or see http://svn.i2b2.org/svn/repos/i2b2/trunk/Maven/lib/jboss/lib/ojdbc14.jar
+    -->
+    <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc14</artifactId>
+      <version>10.2.0.4.0</version>
     </dependency>
 
     <!-- another ServiceLocator.java dependency. hmm. -->
@@ -189,6 +203,13 @@
         <filtering>true</filtering>
       </resource>
     </resources>
+
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
 
     <plugins>
       <!-- maven evidently defaults to 1.3,
