exploring testing, security approaches (#510)   - DeriveCas.java: Servlet derives capabilities via CAS, LDAP   - CASCheck.java, EnterpriseAuthority.java inspired by     "Fine-Grained Privilege Separation for Web Applications".     from http://code.google.com/p/joe-e/wiki/Publications   - DevUserAccessData - toward mock version of DBUtil   - LdapUtilTest.java - testGetDrocEmails()     but that doesn't seem to be the problem   - DBUtilTest.java - @Autowired for components   - SponsorshipServlet.java:     - migrate to Spring MailSender (see also applicationContext.xml)     - extract DBUtil component from servletContext directly. :-/     - move checkQualification to DBUtil for testing     - delete dead code   - PostSponsorshipRequest.java: stub. :-/   - pom.xml:     - add spring-ldap dependency     - address conflict between spring-test and junit     - downgrade javax.mail to 1.4 (hmm... not sure why)
--HG--
branch : frontiers-layout

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -138,4 +138,14 @@
     <servlet-name>TerminateUsers</servlet-name>
     <url-pattern>/TerminateUsers</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>DeriveCas</servlet-name>
+    <servlet-class>edu.kumc.informatics.heron.servlet.DeriveCas</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeriveCas</servlet-name>
+    <url-pattern>/DeriveCas</url-pattern>
+  </servlet-mapping>
+
 </web-app>
