--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         had trouble with the current version:
         http://search.maven.org/#artifactdetails|org.jasig.cas.client|cas-client|3.2.0|pom
     -->
+    <!-- TODO: consider org.springframework.security:spring-security-cas-client:3.0.5.RELEASE -->
     <dependency>
       <groupId>org.jasig.cas.client</groupId>
       <artifactId>cas-client-core</artifactId>
@@ -132,6 +133,18 @@
       <version>2.5.6.SEC02</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.ldap</groupId>
+      <artifactId>spring-ldap-core</artifactId>
+      <version>1.3.1.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.ldap</groupId>
+      <artifactId>spring-ldap-test</artifactId>
+      <version>1.3.1.RELEASE</version>
+    </dependency>
+
     <!-- not sure we need this; see ServiceLocator.java
     <dependency>
       <groupId>javax.jms</groupId>
@@ -147,7 +160,7 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
-      <version>1.4.1</version>
+      <version>1.4</version>
       <scope>provided</scope>
     </dependency>
 
@@ -155,7 +168,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <!-- http://stackoverflow.com/questions/5845990/maven-3-and-junit-4-compilation-problem-package-org-junit-does-not-exist -->
-      <version>4.8.2</version>
+      <version>4.4</version> <!-- 4.8.2 seems to conflict with spring-test -->
       <scope>test</scope>
     </dependency>
     
