factoring authorization out of servlets into filters (#510)   - add capsec package with sponsorship capability security model,     including Agent, Sponsor, Enterprise, DROCSponsoring,     SystemAccessRecords; update DeriveCas test servlet   - add QualifiedFacultyFilter based on capsec layer   - never mind heron.dao.PostSponsorshipRequest.java   - move heron.util.EnterpriseAuthoritiy to heron.capsec.Enterprise
--HG--
branch : frontiers-layout

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -148,4 +148,13 @@
     <url-pattern>/DeriveCas</url-pattern>
   </servlet-mapping>
 
+  <filter>
+    <filter-name>QualifiedFaculty</filter-name>
+    <filter-class>edu.kumc.informatics.heron.servlet.QualifiedFacultyFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>QualifiedFaculty</filter-name>
+    <url-pattern>/u/fac/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
