refactoring sponsorship form input parsing using function idioms   - fix log4j properties for testing   - chip away at StaticValues   - factor Enterprise, SystemAccessRecords into interface and implementation   - refine security exceptions in capsec   - look up beans by name rather than class in SpringServletHelper   - reorder some imports: java, then spring/junit/apache, then local   - chip away at BasicUtil; moved tests from BasicUtilTests elsewhere   - started integration testing with bmidev1, but mostly bailed in favor of unit testing
--HG--
branch : frontiers-layout

--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -5,7 +5,8 @@
 # in i2b2:  <jndi-name>PMBootStrapDS</jndi-name>
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 # assumes SSH tunnel to sturgeon
-jdbc.url=jdbc:oracle:thin:@localhost:1521:bheronFB
+#jdbc.url=jdbc:oracle:thin:@localhost:1521:bheronFB
+jdbc.url=jdbc:oracle:thin:@bmidev1:1521:bmid
 jdbc.username=i2b2pm
 # set password in maven settings.xml
 jdbc.password=${i2b2.pm.password}
