--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>2.5.6.SEC02</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>2.5.6.SEC02</version>
     </dependency>
@@ -184,7 +190,7 @@
     <!-- another ServiceLocator.java dependency. hmm. -->
     <dependency>
       <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
+      <artifactId>javaee-web-api</artifactId>
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
@@ -237,6 +243,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
 	<configuration>
 	  <source>1.6</source>
 	  <target>1.6</target>
@@ -287,7 +294,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-
+        <version>2.1.1</version>
         <configuration>
           <webResources>
             <resource>
