--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,160 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-  <display-name>${project.name} ${env}</display-name>
+    <display-name>${project.name} ${env}</display-name>
 
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
 
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <filter>
-    <filter-name>CAS Single Sign Out Filter</filter-name>
-    <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>CAS Authentication Filter</filter-name>
-    <filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
-    <init-param>
-      <param-name>casServerLoginUrl</param-name>
-      <param-value>https://cas.kumc.edu/cas/</param-value>
-    </init-param>
-    <init-param>
-      <param-name>service</param-name>
-      <!-- ${params} are filtered by maven; see pom.xml -->
-      <param-value>${raven_cas_service}</param-value>
-    </init-param>
-    <init-param>
-      <param-name>renew</param-name>
-      <param-value>false</param-value>
-    </init-param>
-  </filter>
-  <filter>
-    <filter-name>CAS Validation Filter</filter-name>
-    <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
-    <init-param>
-      <param-name>casServerUrlPrefix</param-name>
-      <param-value>https://cas.kumc.edu/cas/</param-value>
-    </init-param>
-    <init-param>
-      <param-name>service</param-name>
-      <param-value>${raven_cas_service}</param-value>
-    </init-param>
-    <init-param>
-      <param-name>redirectAfterValidation</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
-  <filter>
-    <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
-    <filter-class>org.jasig.cas.client.util.HttpServletRequestWrapperFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>CAS Assertion Thread Local Filter</filter-name>
-    <filter-class>org.jasig.cas.client.util.AssertionThreadLocalFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>CAS Single Sign Out Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>CAS Authentication Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>CAS Validation Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>CAS Assertion Thread Local Filter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <listener>
-    <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
-  </listener>
-  <servlet>
-    <description/>
-    <display-name>AuthServlet</display-name>
-    <servlet-name>AuthServlet</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.AuthServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AuthServlet</servlet-name>
-    <url-pattern>/AuthServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description/>
-    <display-name>SysAccessServlet</display-name>
-    <servlet-name>SysAccessServlet</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.SysAccessServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SysAccessServlet</servlet-name>
-    <url-pattern>/SysAccessServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description/>
-    <display-name>SponsorshipServlet</display-name>
-    <servlet-name>SponsorshipServlet</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SponsorshipServlet</servlet-name>
-    <url-pattern>/SponsorshipServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description/>
-    <display-name>SponsorshipApprovalServlet</display-name>
-    <servlet-name>SponsorshipApprovalServlet</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipApprovalServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SponsorshipApprovalServlet</servlet-name>
-    <url-pattern>/SponsorshipApprovalServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description/>
-    <display-name>AcknowledgeDisclaimerServlet</display-name>
-    <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.AcknowledgeDisclaimerServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
-    <url-pattern>/AcknowledgeDisclaimerServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description/>
-    <display-name>TerminateUsers</display-name>
-    <servlet-name>TerminateUsers</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.TerminateUsers</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TerminateUsers</servlet-name>
-    <url-pattern>/TerminateUsers</url-pattern>
-  </servlet-mapping>
+    <filter>
+        <filter-name>CAS Single Sign Out Filter</filter-name>
+        <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>CAS Authentication Filter</filter-name>
+        <filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
+        <init-param>
+            <param-name>casServerLoginUrl</param-name>
+            <param-value>https://cas.kumc.edu/cas/</param-value>
+        </init-param>
+        <init-param>
+            <param-name>service</param-name>
+            <!-- ${params} are filtered by maven; see pom.xml -->
+            <param-value>${raven_cas_service}</param-value>
+        </init-param>
+        <init-param>
+            <param-name>renew</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </filter>
+    <filter>
+        <filter-name>CAS Validation Filter</filter-name>
+        <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
+        <init-param>
+            <param-name>casServerUrlPrefix</param-name>
+            <param-value>https://cas.kumc.edu/cas/</param-value>
+        </init-param>
+        <init-param>
+            <param-name>service</param-name>
+            <param-value>${raven_cas_service}</param-value>
+        </init-param>
+        <init-param>
+            <param-name>redirectAfterValidation</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter>
+        <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+        <filter-class>org.jasig.cas.client.util.HttpServletRequestWrapperFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>CAS Assertion Thread Local Filter</filter-name>
+        <filter-class>org.jasig.cas.client.util.AssertionThreadLocalFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CAS Single Sign Out Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>CAS Authentication Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>CAS Validation Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>CAS HttpServletRequest Wrapper Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>CAS Assertion Thread Local Filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <listener>
+        <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
+    </listener>
+    <servlet>
+        <description/>
+        <display-name>AuthServlet</display-name>
+        <servlet-name>AuthServlet</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.AuthServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AuthServlet</servlet-name>
+        <url-pattern>/AuthServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description/>
+        <display-name>SysAccessServlet</display-name>
+        <servlet-name>SysAccessServlet</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.SysAccessServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SysAccessServlet</servlet-name>
+        <url-pattern>/SysAccessServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description/>
+        <display-name>SponsorshipServlet</display-name>
+        <servlet-name>SponsorshipServlet</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SponsorshipServlet</servlet-name>
+        <url-pattern>/SponsorshipServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description/>
+        <display-name>SponsorshipApprovalServlet</display-name>
+        <servlet-name>SponsorshipApprovalServlet</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.SponsorshipApprovalServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SponsorshipApprovalServlet</servlet-name>
+        <url-pattern>/SponsorshipApprovalServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description/>
+        <display-name>AcknowledgeDisclaimerServlet</display-name>
+        <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.AcknowledgeDisclaimerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AcknowledgeDisclaimerServlet</servlet-name>
+        <url-pattern>/AcknowledgeDisclaimerServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <description/>
+        <display-name>TerminateUsers</display-name>
+        <servlet-name>TerminateUsers</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.TerminateUsers</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TerminateUsers</servlet-name>
+        <url-pattern>/TerminateUsers</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-    <servlet-name>DeriveCas</servlet-name>
-    <servlet-class>edu.kumc.informatics.heron.servlet.DeriveCas</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DeriveCas</servlet-name>
-    <url-pattern>/DeriveCas</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>DeriveCas</servlet-name>
+        <servlet-class>edu.kumc.informatics.heron.servlet.DeriveCas</servlet-class>
+    </servlet>
 
-  <filter>
-    <filter-name>QualifiedFaculty</filter-name>
-    <filter-class>edu.kumc.informatics.heron.servlet.QualifiedFacultyFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>QualifiedFaculty</filter-name>
-    <url-pattern>/u/fac/*</url-pattern>
-  </filter-mapping>
+    <servlet-mapping>
+        <servlet-name>DeriveCas</servlet-name>
+        <url-pattern>/DeriveCas</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>QualifiedFaculty</filter-name>
+        <filter-class>edu.kumc.informatics.heron.servlet.QualifiedFacultyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>QualifiedFaculty</filter-name>
+        <url-pattern>/u/fac/*</url-pattern>
+    </filter-mapping>
+
+<!-- cribbed from
+http://static.springsource.org/docs/Spring-MVC-step-by-step/part1.html
+-->
+    <servlet>
+        <servlet-name>mvc-dispatch</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>mvc-dispatch</servlet-name>
+        <url-pattern>/u/*</url-pattern>
+    </servlet-mapping>
 
 </web-app>
