use StringTemplate for strict separation of code from templates
motivation:

http://www.cs.usfca.edu/~parrt/papers/mvc.templates.pdf

@inproceedings{Parr:2004:ESM:988672.988703,
 author = {Parr, Terence John},
 title = {Enforcing strict model-view separation in template engines},
 booktitle = {Proceedings of the 13th international conference on World Wide Web},
 series = {WWW '04},
 year = {2004},
 isbn = {1-58113-844-X},
 location = {New York, NY, USA},
 pages = {224--233},
 publisher = {ACM},
 address = {New York, NY, USA},
 keywords = {model-view-controller, template engine, web application},
}

--HG--
branch : frontiers-layout

--- a/pom.xml
+++ b/pom.xml
@@ -136,13 +136,11 @@
       <version>1.3.1.RELEASE</version>
     </dependency>
 
-    <!-- not sure we need this; see ServiceLocator.java
     <dependency>
-      <groupId>javax.jms</groupId>
-      <artifactId>jms</artifactId>
-      <version>1.1</version>
+        <groupId>org.antlr</groupId>
+        <artifactId>stringtemplate</artifactId>
+        <version>3.2.1</version>
     </dependency>
-    -->
 
     <!--
 	"before the most generic dependency"
