--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -3,6 +3,12 @@
 # Set root logger level to DEBUG and its only appender to A1.
 log4j.rootLogger=DEBUG, A1
 
+
+log4j.logger.org.springframework.test=INFO
+log4j.logger.org.springframework.beans=INFO
+log4j.logger.org.springframework.core=INFO
+log4j.logger.org.springframework.context=INFO
+
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 
