new users should get added to the BlueHeron project, not Hictr (#548)
--HG--
branch : frontiers-layout

--- a/src/main/resources/configs.properties
+++ b/src/main/resources/configs.properties
@@ -5,7 +5,7 @@
 chalk_url = http://www2.kumc.edu/chalk3/default.aspx
 cas_login_url = https://cas.kumc.edu/cas/login
 i2b2_client_service=${i2b2_client_service}
-user_project=Hictr
+user_project=BlueHeron
 ldap_prov_url=ldap://idvauth.kumc.edu:636
 ldap_principal=cn=biostats, ou=authaccounts,o=idvault
 ldap_credential=${ldap_credential}
