--- a/.classpath
+++ b/.classpath
@@ -1,68 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1/activation-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/xml/bind/jaxb-api/2.1/jaxb-api-2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/xml/jaxb-impl/2.1/jaxb-impl-2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/xml/jsr173/1.0/jsr173-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/servlet/jstl/1.1.2/jstl-1.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4/mail-1.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/xml/stream/stax-api/1.0-2/stax-api-1.0-2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-core/1.0.2/apacheds-core-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-core-shared/1.0.2/apacheds-core-shared-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-kerberos-shared/1.0.2/apacheds-kerberos-shared-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-protocol-changepw/1.0.2/apacheds-protocol-changepw-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-protocol-kerberos/1.0.2/apacheds-protocol-kerberos-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-protocol-ldap/1.0.2/apacheds-protocol-ldap-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-protocol-ntp/1.0.2/apacheds-protocol-ntp-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-protocol-shared/1.0.2/apacheds-protocol-shared-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-server-jndi/1.0.2/apacheds-server-jndi-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-server-main/1.0.2/apacheds-server-main-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/server/apacheds-server-ssl/1.0.2/apacheds-server-ssl-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/backport-util-concurrent/backport-util-concurrent/2.2/backport-util-concurrent-2.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jasig/cas/client/cas-client-core/3.2.0/cas-client-core-3.2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.1/commons-collections-3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-daemon/commons-daemon/1.0.1/commons-daemon-1.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.4/commons-io-1.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.5/commons-lang-2.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/daemon/daemon-bootstrappers/1.0.2/daemon-bootstrappers-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/javaee-web-api/6.0/javaee-web-api-6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jdbm/jdbm/1.0/jdbm-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.4/junit-4.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.9/log4j-1.2.9.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/mina/mina-core/1.0.2/mina-core-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/mina/mina-filter-ssl/1.0.2/mina-filter-ssl-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jvnet/mock-javamail/mock-javamail/1.7/mock-javamail-1.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/oracle/ojdbc14/10.2.0.4.0/ojdbc14-10.2.0.4.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/shared/shared-asn1/0.9.5.5/shared-asn1-0.9.5.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/shared/shared-asn1-codec/0.9.5.5/shared-asn1-codec-0.9.5.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/directory/shared/shared-ldap/0.9.5.5/shared-ldap-0.9.5.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.2/slf4j-api-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.0.1/slf4j-log4j12-1.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.5.6.SEC02/spring-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-aop/3.0.5.RELEASE/spring-aop-3.0.5.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-asm/3.0.5.RELEASE/spring-asm-3.0.5.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-beans/2.5.6.SEC02/spring-beans-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-context/2.5.6.SEC02/spring-context-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-context-support/2.5.6.SEC02/spring-context-support-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-core/2.5.6.SEC02/spring-core-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/ldap/spring-ldap-core/1.3.1.RELEASE/spring-ldap-core-1.3.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/ldap/spring-ldap-test/1.3.1.RELEASE/spring-ldap-test-1.3.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-test/2.5.6.SEC02/spring-test-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/3.0.5.RELEASE/spring-tx-3.0.5.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/2.5.6.SEC02/spring-web-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/2.5.6.SEC02/spring-webmvc-2.5.6.SEC02.jar"/>
-  <classpathentry kind="var" path="M2_REPO/taglibs/standard/1.1.2/standard-1.1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.2.1/stringtemplate-3.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/code/typica/typica/1.3/typica-1.3.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources"/>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
