--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
-#Thu Jan 13 13:35:00 CST 2011
+#Wed Aug 24 11:39:28 CDT 2011
 eclipse.preferences.version=1
 encoding//WebContent/sponsorship.jsp=UTF-8
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
