mad dash to get it to compile so I can start testing. I hope to back this branch out and commit the changes more carefully.
--HG--
branch : mad-dash

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,9 @@
 
         <profile>
             <id>dev</id>
+	    <activation>
+	      <activeByDefault>true</activeByDefault>
+	    </activation>
             <properties>
                 <env>dev</env>
             </properties>
